# 3D_style_transfer

./: .gitignore  .gitmodules  README.md
color_projection/: CMakeLists.txt
color_projection/data/glove/: cameras.txt  glove_filtered.ply  images.txt
color_projection/data/lagann/: cameras.txt
color_projection/data/lagann/rain/: script.bash  script.bash~
color_projection/include/vision_project/: data_txt_reader.h  pcl_filters.h  pcl_simple_viewer.h  projection.h
color_projection/src/: cloud_painting.cpp  data_txt_reader.cpp  filter_point_cloud.cpp  pcl_filters.cpp  pcl_simple_viewer.cpp  view_point_cloud.cpp
learned_descriptors/src/: build.sh  descriptor.lua  extractor.cpp  glove_mosaic_learned.db  matcher.cu  rename.sh  verifier.cpp
scripts/: 3dcnn  3dcnn~  3ddense  3ddense~  3dmesh  3dmesh~  3drec  3drec~  3dstyle  3dstyle~
